# audio_to_tab

./: .gitignore  CLAUDE.md  PROJECT_BACKLOG.md  PROJECT_PLAN.md  pyproject.toml  requirements.txt
cli/: main.py
config/: tunings.py
core/: fretboard_mapping.py  note_processing.py  pipeline.py  pitch_extraction.py  tab_renderer.py
gui/: app.py  cli_reference.py  launcher.bat
gui/widgets/: file_picker.py  stage_panel.py  tab_preview.py
