[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio2tab"
version = "0.1.0"
description = "Convert audio files to guitar/bass ASCII tab"
requires-python = ">=3.11"
dependencies = [
    "basic-pitch==0.4.0",
    "librosa==0.11.0",
    "pretty_midi==0.2.11",
    "numpy==1.26.4",
    "click==8.4.1",
    "pydantic==2.13.4",
    "onnxruntime>=1.26.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.11"]
dev = ["pytest>=9.1"]

[project.scripts]
audio2tab = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*", "config*", "gui*"]
